--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission
         android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES"/>
+    <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
     <uses-permission android:name="android.permission.ADMIN_PRIVILEGES" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -46,12 +46,10 @@
         tools:targetApi="31">
         <activity
             android:name=".LockScreenDeviceActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".LockScreenActivity"
-            android:exported="false"
-           />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -79,19 +77,19 @@
 
         <service
             android:name=".Service.AppBlockerService"
-            android:foregroundServiceType="dataSync"
+            android:enabled="true"
             android:exported="false"
-            android:enabled="true"/>
+            android:foregroundServiceType="dataSync" />
         <service
             android:name=".Service.DeviceBlockerService"
-            android:foregroundServiceType="dataSync"
+            android:enabled="true"
             android:exported="false"
-            android:enabled="true"/>
+            android:foregroundServiceType="dataSync" />
         <service
             android:name=".Service.LocationService"
-            android:foregroundServiceType="location"
+            android:enabled="true"
             android:exported="false"
-            android:enabled="true"/>
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
